# compressor

./: .gitignore  README.md  compress.py  decompress.py  example.txt.huff  example.txt.huff.decoded  pyproject.toml
app/: cli.py  huffman.py
app/compressors/: __init__.py  _base.py  huffman.py
compress/: __main__.py  cli.py  config.py  helpers.py  streamers.py
compress/coders/: __init__.py  _base.py  base.py  huffman.py
compress/coders/huffman/: decoder.py  encoder.py  tree.py
compress/compressors/: __init__.py  _base.py  burrows_wheeler.py  huffman.py
compress/processors/: burrows_wheeler.py  move_to_front.py
compression/coders/huffman/: __init__.py  decoder.py  encoder.py  tree.py
compression/compressors/: __init__.py  _base.py  burrows_wheeler.py  huffman.py
compression/processors/: __init__.py  burrows_wheeler.py  move_to_front.py
tests/: test_burrows_wheeler.py  test_huffman.py  test_move_to_front.py
