[tool.poetry]
name = "compressor"
version = "0.1.0"
description = ""
authors = ["Albert <3litac@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2.0.0"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true
warn_unused_ignores = true
